# Ace-Protocol

./: .gitignore  Anchor.toml  DX-REPORT.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
adapters/: x402Adapter.ts  yieldAdapter.ts
backend/: README.md  ace.sqlite  ace.sqlite-shm  ace.sqlite-wal  config.ts  db.ts  server.ts
engine/: executionRouter.ts  paymentEngine.ts  policyEngine.ts
programs/ace_protocol/: Cargo.toml
programs/ace_protocol/src/: errors.rs  lib.rs  state.rs
programs/ace_protocol/src/instructions/: mod.rs  payment.rs  protocol.rs  vault.rs
scripts/: seed-devnet.ts
services/: aiTreasuryService.ts  heliusService.ts  patternEngine.ts  sessionService.ts  treasuryService.ts
src/: instrumentation.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/activity/: page.tsx
src/app/ai/: page.tsx
src/app/architecture/: page.tsx
src/app/dashboard/: page.tsx
src/app/history/: page.tsx
src/app/onboarding/: page.tsx
src/app/payments/: page.tsx
src/app/vault/: page.tsx
src/components/: NetworkToggle.tsx  Providers.tsx
src/components/auth/: WalletGate.tsx
src/components/brand/: AceMark.tsx
src/components/charts/: AllocationChart.tsx  SpendingChart.tsx  YieldChart.tsx
src/components/dashboard/: CashflowSummary.tsx  ExecutionQuality.tsx  InsightsFeed.tsx  OperationModePanel.tsx  RecentActivity.tsx
src/context/: AppContext.tsx
src/lib/: activityLog.ts  executionRouter.ts  feeEngine.ts  paymentAdapter.ts  yieldAdapter.ts
src/lib/rpc/: index.ts
src/types/: index.ts
(+65 files in other folders)
