[package]
name = "ace_protocol"
version = "0.1.0"
description = "ACE Protocol — Adaptive Cashflow Engine on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ace_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token"] }
